maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: not found: value void
  void setDirection(Direction.NORD)
  ^JediEscaper:34: error: not found: value void
  void setDirection(Direction.SUD)
  ^JediEscaper:38: error: not found: value void
  void setDirection(Direction.OUEST)
  ^JediEscaper:42: error: not found: value void
  void setDirection(Direction.EST)
  ^